<resources>
    <string name="app_name">YogaAdmin</string>

    <string name="add_yoga_course">Add Course</string>
    <string name="add_schedule_yoga_course">Add Schedule</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="time">
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
    </string-array>
    <string-array name="duration">
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
        <item>90 Minutes</item>
        <item>120 Minutes</item>
        <item>150 Minutes</item>
        <item>180 Minutes</item>
    </string-array>
    <string-array name="type">
        <item>Flow Yoga</item>
        <item>Aerial Yoga</item>
        <item>Family Yoga</item>
    </string-array>
    <string-array name="search_type">
        <item>teacher name</item>
        <item>course name</item>
        <item>date</item>
    </string-array>

    <string name="course_name_label">Course Name</string>
    <string name="day_of_week_label">Day of Week</string>
    <string name="time_label">Time</string>
    <string name="capacity_label">Capacity</string>
    <string name="duration_label">Duration</string>"
    <string name="price_label">Price</string>
    <string name="type_label">Type</string>
    <string name="description_label">Description (Optional)</string>
    <string name="date_label">Date</string>
    <string name="teacher_label">Teacher:</string>"
    <string name="teacher_name_label">Teacher Name</string>
    <string name="comment_label">Comment (Optional)</string>
    <string name="yoga_course_label">Yoga Courses</string>
    <string name="create_course_label">Create Yoga Course</string>"
    <string name="yoga_course_details_label">Yoga Course Details</string>
    <string name="yoga_course_schedule_label">Schedules</string>
    <string name="schedule_create_label">Create Schedule</string>
    <string name="yoga_course_schedule_details_label">Course Schedule Details</string>

    <string name="search">Search</string>
    <string name="search_type_label">Search type: </string>
    <string name="error_message">Error message</string>"

    <string name="course_name_hint">Enter course Name</string>
    <string name="day_of_week_hint">Please choose day of week</string>
    <string name="time_hint">Please choose time</string>
    <string name="capacity_hint">Enter capacity (number)</string>
    <string name="duration_hint">Enter duration</string>"
    <string name="price_hint">Enter price</string>
    <string name="type_hint">Pleas choose type</string>
    <string name="description_hint">Enter to describe the course</string>
    <string name="teacher_name_hint">Enter teacher Name</string>
    <string name="comment_hint">Enter comment</string>

    <string name="no_yoga_course_message">No yoga course found</string>"
    <string name="no_schedule_message">No schedule found</string>

</resources>