<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleDetailActivity">

    <TextView
        android:id="@+id/textViewScheduleCreateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/yoga_course_schedule_details_label"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="125dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/textViewCourseScheduleNameLabel"
                android:layout_width="350dp"
                android:layout_height="29dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/course_name_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewCourseScheduleName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/textViewCourseScheduleNameLabel"
                app:layout_constraintTop_toBottomOf="@id/textViewCourseScheduleNameLabel" />

            <TextView
                android:id="@+id/textViewScheduleDateTimeLabel"
                android:layout_width="350dp"
                android:layout_height="29dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/date_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textViewCourseScheduleNameLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewCourseScheduleNameLabel"
                tools:ignore="TextSizeCheck" />

            <CalendarView
                android:id="@+id/calendarViewSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/textViewScheduleDateTimeLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewScheduleDateTimeLabel" />

            <TextView
                android:id="@+id/textViewDateScheduleErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_error"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/calendarViewSchedule"
                app:layout_constraintTop_toBottomOf="@+id/calendarViewSchedule" />

            <TextView
                android:id="@+id/textViewTeacherNameLabel"
                android:layout_width="350dp"
                android:layout_height="29dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/teacher_name_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/textViewScheduleDateTimeLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/editTextTeacherName"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/textViewTeacherNameLabel"
                app:layout_constraintTop_toBottomOf="@id/textViewTeacherNameLabel" />

            <TextView
                android:id="@+id/textViewTeacherNameErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_error"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/editTextTeacherName"
                app:layout_constraintTop_toBottomOf="@id/editTextTeacherName" />

            <TextView
                android:id="@+id/textViewCommentLabel"
                android:layout_width="350dp"
                android:layout_height="29dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/comment_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/textViewTeacherNameLabel"
                app:layout_constraintTop_toBottomOf="@id/textViewTeacherNameLabel" />

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/textViewCommentLabel"
                app:layout_constraintTop_toBottomOf="@id/textViewCommentLabel" />

            <TextView
                android:id="@+id/textViewCommentErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/design_default_color_error"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/editTextComment"
                app:layout_constraintTop_toBottomOf="@id/editTextComment" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FF4CAF50"
        android:fontFamily="sans-serif-black"
        android:onClick="onClickUpdateSchedule"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FF2196F3"
        android:fontFamily="sans-serif-black"
        android:onClick="onClickEditSchedule"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="225dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FFFFEB3B"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:onClick="onClickCancelSchedule"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="225dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FF3B30"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:onClick="onClickDeleteSchedule"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>