<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp"
    android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".YogaCourseCreateActivity">

                <TextView
                    android:id="@+id/textViewCreateCourseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_course_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewNameLabel"
                    android:layout_width="350dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="76dp"
                    android:text="@string/course_name_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextCourseName"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textViewNameLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

                <TextView
                    android:id="@+id/textViewNameErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="24dp"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/editTextCourseName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

                <TextView
                    android:id="@+id/textViewDayOfWeekLabel"
                    android:layout_width="350dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="108dp"
                    android:text="@string/day_of_week_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

                <Spinner
                    android:id="@+id/spinnerDayOfWeek"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:entries="@array/day_of_week"
                    app:layout_constraintStart_toStartOf="@+id/textViewDayOfWeekLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDayOfWeekLabel" />

                <TextView
                    android:id="@+id/textViewDayOfWeekErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="24dp"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/spinnerDayOfWeek"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerDayOfWeek" />

                <TextView
                    android:id="@+id/textViewTimeLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="112dp"
                    android:text="@string/time_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDayOfWeekLabel" />

                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:entries="@array/time"
                    app:layout_constraintStart_toStartOf="@+id/textViewTimeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTimeLabel" />

                <TextView
                    android:id="@+id/textViewTimeErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/spinnerTime"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerTime" />

                <TextView
                    android:id="@+id/textViewCapacityLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="112dp"
                    android:text="@string/capacity_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTimeLabel" />

                <EditText
                    android:id="@+id/editTextCapacity"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textViewCapacityLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCapacityLabel" />

                <TextView
                    android:id="@+id/textViewCapacityErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/editTextCapacity"
                    app:layout_constraintTop_toBottomOf="@+id/editTextCapacity" />

                <TextView
                    android:id="@+id/textViewDurationLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/duration_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCapacityLabel" />

                <Spinner
                    android:id="@+id/spinnerDuration"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:entries="@array/duration"
                    app:layout_constraintStart_toStartOf="@+id/textViewDurationLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDurationLabel" />

                <TextView
                    android:id="@+id/textViewDurationErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/spinnerDuration"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerDuration" />

                <TextView
                    android:id="@+id/textViewPriceLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="380dp"
                    android:text="@string/price_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTimeLabel" />

                <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="@+id/textViewPriceLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPriceLabel" />

                <TextView
                    android:id="@+id/textViewPriceErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/editTextPrice"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

                <TextView
                    android:id="@+id/textViewTypeLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="96dp"
                    android:text="@string/type_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPriceLabel" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="350dp"
                    android:layout_height="48dp"
                    android:entries="@array/type"
                    app:layout_constraintStart_toStartOf="@+id/textViewTypeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTypeLabel" />

                <TextView
                    android:id="@+id/textViewTypeErrorMessage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/spinnerType"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerType" />


                <TextView
                    android:id="@+id/textViewDescriptionLabel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="104dp"
                    android:text="@string/description_label"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTypeLabel" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="350dp"
                    android:layout_height="128dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/textViewDescriptionLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionLabel" />

                <Button
                    android:id="@+id/buttonAddCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="208dp"
                    android:backgroundTintMode="add"
                    android:onClick="onCLickAddCourse"
                    android:text="@string/add_yoga_course"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionLabel" />

                <Button
                    android:id="@+id/buttonClearTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="80dp"
                    android:onClick="onClickClear"
                    android:text="@string/clear_yoga_course"
                    app:layout_constraintStart_toEndOf="@+id/buttonAddCourse"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>