<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">

    <ListView
        android:id="@+id/listViewSchedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/listview_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchBar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewScheduleListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/yoga_course_schedule_label"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSearchType"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/searchbar_background"
        android:entries="@array/search_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearchBar"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/searchbar_background"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:contentDescription="@string/search"
        android:focusable="true"
        android:onClick="onClickSearchSchedule"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/editTextSearchBar"
        app:layout_constraintTop_toTopOf="@+id/editTextSearchBar"
        app:srcCompat="@drawable/button_search" />

    <RelativeLayout
        android:id="@+id/panelNoYogaCourseMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_schedule_message"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/panelLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>